fix(multitypeahead): fix cursor alignment to be on level with items

--- a/src/styles/grid-form-builder.css
+++ b/src/styles/grid-form-builder.css
@@ -290,8 +290,12 @@ div.gfb-input__value-container--is-multi.gfb-input__value-container {
 
 div.gfb-input__value-container--is-multi {
   align-items: flex-start;
-  padding-top: 1px;
 }
+
+div.gfb-input__value-container--is-multi > div > div.gfb-input__input {
+  padding-top: 4px
+} 
+
 
 div.gfb-input__placeholder {
   top: 10px;
